refactor: migrate to template-agnostic architecture and add TPT V7 manifest
- Decouple validation engine and spec loading from TPT-specific logic.
- Introduce TemplateRegistry and manifest-driven spec loading (SpecManifest).
- Refactor profiles into Template-specific ProfileKeys (e.g., TptProfiles).
- Update UI to use a TabPane for multi-template support.
- Move TPT V7 specification into a manifest-controlled structure.
- Update documentation (README, roadmap) to reflect the new architecture.
- Align entire test suite with the new profile and template APIs.